Made some changes to ChiliPeppr widget using Cloud9

--- a/auto-generated-widget.html
+++ b/auto-generated-widget.html
@@ -568,7 +568,7 @@ cpdefine("inline:com-chilipeppr-widget-configtinyg", ["chilipeppr_ready"], funct
             });
 
             var that = this;
-            chilipeppr.load("http://fiddle.jshell.net/chilipeppr/zMbL9/show/light/", function () {
+            chilipeppr.load("https://raw.githubusercontent.com/chilipeppr/widget-pubsubviewer/master/auto-generated-widget.html", function () {
                 require(['inline:com-chilipeppr-elem-pubsubviewer'], function (pubsubviewer) {
                     pubsubviewer.attachTo($('#com-chilipeppr-widget-configtinyg .modal-header .dropdown-menu'), that);
                 });
